<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="welcome">My Nanodegree Apps!</string>
    <string name="action_settings">Settings</string>
    <string name="spotify_streamer_lbl">Spotify Streamer</string>
    <string name="scores_app_lbl">Scores App</string>
    <string name="library_app_lbl">Library App</string>
    <string name="build_it_bigger_lbl">Build it Bigger</string>
    <string name="xyz_reader_lbl">XYZ Reader</string>
    <string name="my_own_app_lbl">Capstone : My Own App</string>
</resources>
