<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView android:text="@string/welcome" android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/spotify_streamer_btn"
        android:text="@string/spotify_streamer_lbl"

        style="@style/btn_default" />
    <Button
        android:id="@+id/scores_app_btn"
        android:text="@string/scores_app_lbl"
        style="@style/btn_default" />
    <Button
        android:id="@+id/library_app_btn"
        android:text="@string/library_app_lbl"
        style="@style/btn_default" />

    <Button
        android:id="@+id/build_it_bigger_btn"
        android:text="@string/build_it_bigger_lbl"
        style="@style/btn_default" />
    <Button
        android:id="@+id/xyz_reader_btn"
        android:text="@string/xyz_reader_lbl"
        style="@style/btn_default" />
    <Button
        android:id="@+id/my_own_app_btn"
        android:text="@string/my_own_app_lbl"
        style="@style/btn_default" />

</RelativeLayout>

